--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,9 +5,11 @@ body {
     padding-top: 40px;
     padding-bottom: 40px;
     background-color: #f5f5f5;
+
   }
+
 button {
-    background-color: blueviolet;
+    background-color:chartreuse;
     margin-right: 10px;
   }
 .container.mt-3 {
@@ -23,4 +25,7 @@ button {
   }
 a.w-100 {
     width: 100px;
+
+
 }
+
