--- a/views/editarProducto.pug
+++ b/views/editarProducto.pug
@@ -1,36 +1,39 @@
 extends base.pug
 
 block head
-    link(rel="stylesheet", href="css/editarProducto.css")
+    link(rel="stylesheet", href="/css/editarProducto.css")
+
 block title
     title Editar Producto
 block container
     .container.mt-5
         h1 Editar Producto
         hr
-        form(action="/buscarProducto" method="post")
-            
+        form(action="/editarProducto/"+data.id method="post")
+                
             .form-group.mt-3#id
-                label(for="id" ) Id
-                input#id.form-control(  type="text" name="id")
-                button.btn.btn-primary Buscar
+                label#id(for="id" ) Id
+                input#id.form-control(  type="text" name="id" value= `${data.id }`)
 
             .form-group.mt-3
                 label(for="nombre" ) Descripcion
-                input#username.form-control( type="text" name="nombre" value= `${nombre}`)
-            
+                input#nombre.form-control( type="text" name="nombre" value= `${data.nombre }` ) 
+                
             .form-group.mt-3
                 label(for="precioCompra" ) Precio de compra
-                input#password.form-control( type="text" name="precioCompra")
+                input#precioC.form-control( type="text" name="precioCompra" value= `${data.precioCompra }`)
 
 
             .form-group.mt-3
                 label(for="precioVenta" ) Precio de Venta
-                input#password.form-control( type="text" name="precioVenta")
+                input#precioV.form-control( type="text" name="precioVenta" value= `${data.precioVenta }`)
 
             .form-group.mt-3
                 label(for="categoria" ) Categoria
-                input#fullname.form-control(  type="text" name="categoria")
+                input#categoria.form-control(  type="text" name="categoria", value= `${data.categoria }`)
+            .form-group.mt-3
+                .d-grid.gap-2
+                    button.btn.btn-primary Editar
           
 
 
