--- a/views/index.pug
+++ b/views/index.pug
@@ -2,14 +2,15 @@ extends base.pug
 block head
     link(rel="stylesheet", href="css/index.css")
 
+
 block title
     title Welcome
-
+    
 block container
     h1  Bienvenido
     .container.mt-2
 
-        a.w-100.btn.btn-lg.btn-secondary.mt-1(href="/productos") Productos
-        a.w-100.btn.btn-lg.btn-secondary.mt-1(href="/categorias") Categorias
+        a.w-100.btn.btn-lg.btn-secondary.mt-1(href="/verProducto") Productos
+        a.w-100.btn.btn-lg.btn-secondary.mt-1(href="/verCategoria") Categorias
     
     
