--- a/views/productos.pug
+++ b/views/productos.pug
@@ -8,7 +8,7 @@ block title
 block container
     h1  Gestionar Productos
     .container.mt-2
-
+        a.w-100.btn.btn-lg.btn-secondary.mt-1(href="/verProducto") ver
         a.w-100.btn.btn-lg.btn-secondary.mt-1(href="/agregarProducto") Agregar
         a.w-100.btn.btn-lg.btn-secondary.mt-1(href="/editarProducto") Editar
 
