--- a/views/verCategoria.pug
+++ b/views/verCategoria.pug
@@ -26,6 +26,8 @@ block container
                             a.w-10.btn.btn-lg.btn-success(href="/editarCategoria/"+val.idCategoria) Editar 
                             a.w-10.btn.btn-lg.btn-danger(href="/eliminarCategoria/"+val.idCategoria) Eliminar
         a.w-10.btn.btn-lg.btn-dark(href="/agregarCategoria") Agregar Categorias
+        a.w-10.btn.btn-lg.btn-dark(href="/") Regresar
+
 
     else 
         p No hay categorias para mostrar 
