--- a/views/verProducto.pug
+++ b/views/verProducto.pug
@@ -28,6 +28,8 @@ block container
                             a.w-10.btn.btn-lg.btn-success(href="/editarProducto/"+val.id) Editar 
                             a.w-10.btn.btn-lg.btn-danger(href="/eliminarProducto/"+val.id) Eliminar
         a.w-10.btn.btn-lg.btn-dark(href="/agregarProducto") Agregar Productos
+        a.w-10.btn.btn-lg.btn-dark(href="/") Regresar
+
 
     else 
         p No hay productos para mostrar 
